# ZCST_FEE_Bot

./: .gitignore  README.md  bot.py  config.py  config.yaml.example  fetcher.py  main.py  payment.py  pyproject.toml  requirements.txt  sso.py  store.py  utils.py
.github/workflows/: build.yml
