[project]
name = "zcst-fee-bot"
version = "0.1.0"
description = "宿舍电费/冷热水余额监控机器人"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "python-telegram-bot[job-queue]>=20.0",
]

[project.scripts]
fee-bot = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
